--- a/intro.qmd
+++ b/intro.qmd
@@ -141,7 +141,7 @@ Converting data between formats takes processing time, and it can lose some deta
 Facing this scenario, developers from several of these projects came together and asked: can we define a standard for representing columnar data, such that each project only needs to implement that?
 Having that standard saves on engineering effort because there’s just one adapter to write.
 
-![Using Arrow as a standard interchange, you need to only write one interconnect per system and you can then use any of the others that speak Arrow](images/excalidraw/intro_arrow_adapter.png)
+![Using Arrow as a standard interchange, you need to only write one interconnecter per system, at which point you can then use any of the other systems that also speak Arrow](images/excalidraw/intro_arrow_adapter.png)
 
 But in order to get the most savings, you also need to minimize the translation overhead.
 Ideally, the standard format would be exactly what every analytic project uses internally---then there is no translation.
