--- a/files_and_formats.qmd
+++ b/files_and_formats.qmd
@@ -1,5 +1,7 @@
 # Files and Formats {#sec-filesformats}
 
+{{< include _knitr_hooks.qmd >}}
+
 In the previous chapter, we started exploring a dataset made up of CSV files, and then skipped ahead to working with a version we'd converted to Parquet files.
 While CSVs are ubiquitous, Parquet files have a lot of nice features that make them ideal for analytic workloads:
 
@@ -283,6 +285,7 @@ You can see here on the first few rows, the `PUMA` values are `"00101"`, `"00101
 
 ```{r}
 #| label: pums-puma-readlines
+#| width_limit: 72
 readLines(
   "./data/raw_csvs/person/2021/ak/psam_p02.csv",
   n = 5
