Fix partitioning image and make more legible (#40)

--- a/datasets.qmd
+++ b/datasets.qmd
@@ -145,7 +145,13 @@ This can significantly speed up analyses of larger datasets.
 
 We have already been working with partitioned data: the data in the PUMS person dataset has been partitioned based on the "year" and "location" columns.
 
-![Folder and file structure of a partitioned dataset](images/excalidraw/datasets_pums_small.png)
+::: {.content-hidden when-format="pdf"}
+![Folder and file structure of a partitioned dataset](images/excalidraw/datasets_pums.png){width=70%}
+:::
+::: {.content-hidden when-format="html"}
+![Folder and file structure of a partitioned dataset](images/excalidraw/datasets_pums.png){height=70%}
+:::
+
 Partitioning is where groups of rows of data have been saved to separate files.
 These separate files are saved in directories, where each directory represents the rows of the data where a particular column has a particular value.
 
