--- a/datasets.qmd
+++ b/datasets.qmd
@@ -102,8 +102,7 @@ open_dataset("./data/person") |>
   filter(location == "wa") |>
   group_by(year) |>
   summarize(
-    avg_commute = sum(JWMNP * PWGTP, na.rm = TRUE) /
-      sum(PWGTP)
+    avg_commute = sum(JWMNP * PWGTP, na.rm = TRUE) / sum(PWGTP)
   ) |>
   arrange(desc(year)) |>
   collect()
@@ -289,9 +288,7 @@ open_dataset("./data/person") |>
       TRUE ~ "65+"
     )
   ) |>
-  write_dataset(
-    path = file.path(tmp_dir, "person-age-partitions")
-  )
+  write_dataset(path = file.path(tmp_dir, "person-age-partitions"))
 ```
 
 ### Custom filenames
@@ -562,8 +559,7 @@ First, let's try running query which just requires filtering the data by one of 
 open_dataset("<path/to/data>") |>
   filter(year >= 2018) |>
   summarise(
-    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) /
-      sum(PWGTP)
+    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) / sum(PWGTP)
   ) |>
   collect()
 ```
@@ -609,8 +605,7 @@ open_dataset("<path/to/data>") |>
   ) |>
   group_by(year, age_group, location) |>
   summarise(
-    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) /
-      sum(PWGTP)
+    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) / sum(PWGTP)
   ) |>
   collect()
 ```
@@ -659,8 +654,7 @@ open_dataset("<path/to/data>") |>
   ) |>
   group_by(year, location, age_group) |>
   summarise(
-    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) /
-      sum(PWGTP)
+    mean_commute = sum(JWMNP * PWGTP, na.rm = TRUE) / sum(PWGTP)
   ) |>
   collect()
 ```
